style.css
/* GENERAL RULES */
*,
html,
body {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}
/*variables */
:root {
  --main-tx-color: #07043b;
  --btn-bg-color: #2f65f8;
  --main-color: #ffffff;
}
body {
  /* font-family: "Raleway", sans-serif; */
  font-size: 14px;
  font-family: "Open Sans", sans-serif;
  overflow-x: hidden;
}
a,
h1,
h2,
h3 {
  font-family: "Raleway", sans-serif;
  font-weight: 400;
  font-size: 16px;
}
.wrapper {
}
nav {
  display: flex;
  flex-direction: row;
  width: 87.4%;
  margin: 24px auto;
  align-items: center;
  justify-content: space-between;
}
li {
  list-style: none;
}
a {
  text-decoration: none;
}
label {
  position: relative;
  width: 100%;
  margin: auto;
  display: block;
  text-align: center;
}
/*==================HEADER NAV=======================*/
.logo {
  width: 82px;
  display: block;
  margin: auto;
}
.navlist {
  display: flex;
  justify-content: space-between;
  width: 176px; /* 51% mobile view */
}

.navlist__header__links {
  font-size: 0.75rem;
  color: var(--main-tx-color);
}

/*==================MAIN SECTION MOBILE FIRST===================*/
/*=======HERO========*/
.hero {
  width: 85.5%;
  margin: 100px auto 0;
}
.hero__img {
  background-image: url("./images/illustration-1.svg");
  width: 95%;
  height: 225px;
  max-height: 100%;
  background-repeat: no-repeat;
  background-size: contain;
  background-position: 50% 50%;
}
.hero__signup {
  padding-top: 40px;
}
.hero__signup__title {
  font-weight: 700;
  font-size: 1.5rem;
  text-align: center;
  line-height: 36px;
}
.hero__signup__summary {
  font-size: 0.875rem;
  margin: 24px auto 0;
  line-height: 21px;
  text-align: center;
  width: 92.5%;
  color: #07043b;
}
/*====USED HERO AND  IN FOOTER AS WELL=== */
form {
  margin-top: 32px;
  display: flex;
  flex-direction: column;
  row-gap: 12px;
  align-items: center;
}
.email {
  width: min(304px, 95%);
  font-size: 0.75rem;
  padding: 12px 10px;
  color: #c2c2c2;
  border: 1px solid var(--main-tx-color);
  border-radius: 3.13px;
}
.btnSubmit {
  width: 304px;
  padding: 12px 10px;
  border-radius: 3.13px;
  outline: none;
  border: none;
  background-color: var(--btn-bg-color);
  color: var(--main-color);
  font-size: 0.875rem;
  font-weight: 700;
}
/*===== END OF HERO AND FOOTER STYLES ===== MOBILE FIRST*/

/*=====MAIN PRODUCTIVE SECTION MOBILE FIRST === */
.productive {
  margin-top: 105px;
}
.productive__btn {
  width: 130px;
  background-color: transparent;
  border: none;
  margin: 36px auto 0;
  display: block;
  border-bottom: 3px solid #3da08f;
  padding-bottom: 5px;
}
.productive__btn--a {
  display: flex;
  flex-wrap: nowrap;
  align-items: center;
  justify-content: space-between;
  font-size: 0.75rem;
  color: #3da08f;
  width: 100%;
}
.productive__container {
  background-image: url("./images/bg-curve-mobile.svg");
  background-repeat: no-repeat;
  background-size: 580% 100%;
  background-position: 50% 50%;
}
.productive__image {
  width: 100%;
  position: relative;
  padding-top: 93px;
}
.productive__image img {
  width: 85.5%;
  margin: auto;
  display: block;
}
.productive__details {
  padding-top: 87px;
  background-color: #f8f8fe;
  padding-bottom: 30px;
}
.productive__title {
  font-size: 1rem;
  font-weight: 700;
  text-align: center;
  line-height: 24px;
}
.product__summaries {
  margin-top: 24px;
  display: flex;
  flex-wrap: wrap;
  flex-direction: column;
  row-gap: 16px;
}
.productive__summary {
  font-size: 0.875rem;
  line-height: 21px;
  width: 85.5%;
  margin: auto;
  text-align: center;
  color: #615f7e;
}

.card {
  width: 74.8%;
  max-width: 356px;
  margin: 40px auto;
  border: none;
  background-color: var(--main-color);
}
.card__quorte {
  position: relative;
  padding-top: 28px;
  padding-left: 26px;
}

.card__quorte::before {
  position: absolute;
  content: "";
  width: 14px;
  height: 54px;
  background-image: url("./images/icon-quotes.svg");
  background-repeat: no-repeat;
  top: 25px;
  left: 25px;
}
.card__quorte__summary {
  font-size: 0.625rem;
  letter-spacing: 0.38px;
  line-height: 18.1px;
  color: #04073b;
  margin-top: 18px;
}
.card__profile__img {
  width: 24px;
  border-radius: 50%;
}
.card__profile__title {
  font-size: 0.56rem;
  font-weight: 700;
  letter-spacing: 0.45px;
  font-family: "Open sans", sans-serif;
}
.card__profile__subtitle {
  font-size: 0.375rem;
  letter-spacing: 0.3px;
  line-height: 11.8px;
}
.card__profile {
  width: 105px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-wrap: nowrap;
  margin-top: 12px;
  padding-bottom: 15px;
}

/* ======END OF MAIN PRODUCTIVE SECTION MOBILE FIRST ==== */

/* =====FOOTER SECTION MOBILE FIRST=== */
.footer__signup {
  background-color: #575988;
  color: var(--main-color);
}
.footer__hero__signup__title {
  padding-top: 14px;
  font-size: 1rem;
  line-height: 24px;
}
.footer__hero__signup__summary {
  width: 74.8%;
  color: var(--main-color);
}
.footer__form {
  padding-bottom: 71px;
}
.main__footer {
  background-color: var(--main-tx-color);
  color: var(--main-color);
  padding-top: 65px;
  padding-bottom: 42px;
}
.footer__logo__img {
  transform: scale(0.64);
  margin-left: 10px;
}
.footer__logo__img path {
  fill: var(--main-color);
}

.contact {
  margin-left: 39px;
  margin-top: 32px;
  margin-right: 39px;
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
}

.phone__email {
  display: flex;
  flex-wrap: nowrap;
  flex-direction: column;
  row-gap: 16px;
  justify-content: left;
  align-items: baseline;
}
.phone,
.email__data {
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  column-gap: 16px;
}
.aboutus {
  margin-top: 32px;
}
.navlist__footer {
  width: 100%;
  display: flex;
  flex-wrap: nowrap;
  flex-direction: column;
  row-gap: 16px;
}
.contactus {
  margin-top: 32px;
  margin-bottom: 32px;
}
.contact a,
.aboutus a {
  color: white;
}
.socials {
  display: flex;
  column-gap: 9px;
  width: 104px;
  margin: auto;
}
/* ... */

